# laravel.pv113.com/routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use \App\Http\Controllers\Api\CategoriesController;
+use App\Http\Controllers\Api\SenderController;
 
 Route::get('/user', function (Request $request) {
     return $request->user();
@@ -13,3 +14,5 @@ Route::get('/categories/{id}', [CategoriesController::class, 'getById']);
 Route::post('/categories/create', [CategoriesController::class, 'create']);
 Route::delete("/categories/{id}", [CategoriesController::class, "delete"]);
 Route::post("/categories/edit/{id}", [CategoriesController::class, "edit"]);
+
+Route::post('/send/email', [SenderController::class, 'send_email']);
