# laravel.pv113.com/storage/api-docs/api-docs.json
@@ -174,6 +174,36 @@
                     }
                 }
             }
+        },
+        "/api/send/email": {
+            "post": {
+                "tags": [
+                    "Sender"
+                ],
+                "operationId": "fca2a89c2ac3ccda341e90161c1a8d73",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "email"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Add Category."
+                    }
+                }
+            }
         }
     }
 }
